	PR c++/37417 	* tree.c (array_type_nelts_top): Add size_one_node instead of 	integer_one_node.

* g++.dg/ext/vla5.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140178 138bc75d-0d04-0410-961f-82ee72b054a4